@@ -367,7 +367,7 @@ class tx_jhedamextender_pi1 extends tslib_pibase {
 	   $util = new util();
 
         $GLOBALS['TSFE']->additionalHeaderData[$this->extKey] = '
-            <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+            <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
             <script type="text/javascript">
                 $(document).ready(function() {
                     // AJAX Request per eID
